# Regression-Demo-F25

./: .gitattributes  .gitignore  Reg_Demo_SOLUTION.ipynb  Reg_Demo_STUDENT.ipynb  pyproject.toml
data/: pdb2023tr.csv  pdb2023tr_reduced.csv
